launchpad-buildd: handle stale buildlog in preinst check.  Cleanup error output.

--- a/lib/canonical/buildd/debian/changelog
+++ b/lib/canonical/buildd/debian/changelog
@@ -1,18 +1,21 @@
-launchpad-buildd (61) UNRELEASED; urgency=high
+launchpad-buildd (61) hardy-cat; urgency=high
 
-  [William Grant]
+  [ William Grant ]
   * Fixed translation templates slave to return files properly. LP#549422
 
-  [Danilo Segan]
+  [ Danilo Segan ]
   * Added more output to generate-translation-templates. LP#580345
 
-  [Henning Eggers]
+  [ Henning Eggers ]
   * Improved output of build xmplrpc call, not returning None now. LP#581746
   * Added apache2 dependency. LP#557634
   * Added preinst script to prevent installation when a build is running.
     LP#557347
 
- -- Henning Eggers <henning@canonical.com>  Wed, 19 May 2010 18:51:38 +0200
+  [ LaMont Jones ]
+  * preinst needs to detect a stale buildlog as well.
+
+ -- LaMont Jones <lamont@canonical.com>  Fri, 21 May 2010 05:52:53 -0600
 
 launchpad-buildd (60) lucid-cat; urgency=low
 
