--- a/lib/canonical/buildd/debian/changelog
+++ b/lib/canonical/buildd/debian/changelog
@@ -1,3 +1,9 @@
+launchpad-buildd (62) hardy-cat; urgency=low
+
+  * Make the buildds cope with not having a sourcepackagename LP#587109 
+
+ -- LaMont Jones <lamont@canonical.com>  Tue, 08 Jun 2010 13:02:31 -0600
+
 launchpad-buildd (61) hardy-cat; urgency=high
 
   [ William Grant ]
