--- a/lib/canonical/buildd/debian/changelog
+++ b/lib/canonical/buildd/debian/changelog
@@ -1,3 +1,10 @@
+launchpad-buildd (63) hardy-cat; urgency=low
+
+  * Drop apply-ogre-model, since override-sources-list replaced it three years
+    ago. Also clean up extra_args parsing a bit.
+
+ -- William Grant <wgrant@ubuntu.com>  Sat, 12 Jun 2010 11:33:11 +1000
+
 launchpad-buildd (62) hardy-cat; urgency=low
 
   * Make the buildds cope with not having a sourcepackagename LP#587109 
