Reverted c.l.i __init__. It is safer to land with this unchanged, so that the globs can be removed in small passes. Fixes typos and accidental deletions from tests.

--- a/lib/lp/translations/doc/translationimportqueue.txt
+++ b/lib/lp/translations/doc/translationimportqueue.txt
@@ -29,7 +29,7 @@ Here we have some imports and utility fetch.
     ...     ILaunchpadCelebrities)
     >>> from lp.registry.interfaces.product import IProductSet
     >>> from lp.registry.interfaces.distribution import IDistributionSet
-    >>> from lp.registry.interfaces.distroserues import IDistroSeries
+    >>> from lp.registry.interfaces.distroseries import IDistroSeries
     >>> from lp.registry.interfaces.sourcepackagename import (
     ...     ISourcePackageNameSet)
     >>> from lp.translations.interfaces.translationimportqueue import (
