restored missing import.

--- a/lib/lp/translations/doc/canonical_url_examples.txt
+++ b/lib/lp/translations/doc/canonical_url_examples.txt
@@ -11,7 +11,8 @@ Homepage
 
 The Rosetta homepage.
 
-    >>> from lp.registry.interfaces.launchpad import IRosettaApplication
+    >>> from canonical.launchpad.interfaces.launchpad import (
+    ...     IRosettaApplication)
     >>> canonical_url(getUtility(IRosettaApplication))
     u'http://launchpad.dev/translations'
 
